@@ -61,6 +61,8 @@
     <Compile Include="Models\FootballScore.cs" />
     <Compile Include="Models\DummyStringPairModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeConverters\BooleanTypeConverter.cs" />
+    <Compile Include="TypeConverters\Interfaces\IPrimitiveTypeConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="InputFiles\football.dat">
@@ -70,6 +72,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="InputFiles\GenerateTestData.xlsx" />
+    <None Include="InputFiles\PrimitiveTypesTest.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="InputFiles\StringTest.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
