@@ -1,0 +1,4 @@
+0         a         string1   true      42             
+1         b         string2   false     36             
+2         c         string3   1         123.45678910   
+3         .         ABCDEFG   TRUE      100,000        
