@@ -1,5 +1,6 @@
 ﻿using System.Collections.Generic;
 using System.Collections.ObjectModel;
+using System.IO;
 using System.Linq;
 using FlatFile.FixedWidth.Implementation;
 using FlatFile.FixedWidth.Interfaces;
@@ -11,19 +12,22 @@ namespace FlatFileParserUnitTests.Tests.LayoutDescriptor
     [TestClass]
     public class PrimitiveTypesTest : ParserTestBase<PrimitiveTypes>
     {
-        private readonly int fieldLength = 10;
-        private ICollection<PrimitiveTypes> parsedRows;
+        private readonly int defaultFieldLength = 10;
 
         [TestMethod]
         public void Should_ConvertStringToBool_When_TypeConverterDefined()
         {
-            Assert.IsInstanceOfType(parsedRows.First().boolTest, typeof(bool));
+            CollectionAssert.AllItemsAreInstancesOfType(
+                ParsedRows
+                    .Select(x => x.boolTest)
+                    .ToList(),
+                typeof(bool));
         }
 
         [TestMethod]
-        public void Should_Read2Rows_When_InputFileHas2Rows()
+        public void Should_ParseAllFieldsMatchingExpected_When_ParseFileIsCalled()
         {
-            Assert.AreEqual(ParsedRows.Count, 2);
+            AssertAllRowsMatchExpected();
         }
 
         [TestMethod]
@@ -33,9 +37,9 @@ namespace FlatFileParserUnitTests.Tests.LayoutDescriptor
         }
 
         [TestMethod]
-        public void Should_ParseAllFieldsMatchingExpected_When_ParseFileIsCalled()
+        public void Should_ReadNumberOfRowsMatchingInputFile_When_ParseFileIsCalled()
         {
-            AssertAllRowsMatchExpected();
+            Assert.AreEqual(ParsedRows.Count, 4);
         }
 
         protected override ICollection<PrimitiveTypes> GetExpectedRows()
@@ -56,24 +60,41 @@ namespace FlatFileParserUnitTests.Tests.LayoutDescriptor
                     charTest = 'b',
                     stringTest = "string2",
                     boolTest = false,
-                    doubleTest = 36
+                    doubleTest = 36 // testing int to double
+                },
+                new PrimitiveTypes
+                {
+                    id = 3,
+                    charTest = 'c',
+                    stringTest = "string3",
+                    boolTest = false, // '1' in test file
+                    doubleTest = 123.45678910 // testing decimal to double
+                },
+                new PrimitiveTypes
+                {
+                    id = 4,
+                    charTest = '.',
+                    stringTest = "ABCDEFG",
+                    boolTest = true, // 'TRUE' in test file (testing caps)
+                    doubleTest = 100000 // '100,000' in test file (testing commas
                 }
             };
         }
 
         protected override string GetFilePath()
         {
-            throw new System.NotImplementedException();
+            var directory = Path.GetDirectoryName(System.Reflection.Assembly.GetExecutingAssembly().Location);
+            return $"{directory}\\InputFiles\\PrimitiveTypesTest.dat"; // file properties should be "Content" and "Copy If Newer" (or similar)
         }
 
         protected override IFlatFileLayoutDescriptor<PrimitiveTypes> GetLayout()
         {
             return new LayoutDescriptor<PrimitiveTypes>()
-                .AppendField(x => x.id, fieldLength)
-                .AppendField(x => x.boolTest, fieldLength)
-                .AppendField(x => x.charTest, fieldLength)
-                .AppendField(x => x.doubleTest, fieldLength)
-                .AppendField(x => x.stringTest, fieldLength);
+                .AppendField(x => x.id, defaultFieldLength)
+                .AppendField(x => x.charTest, defaultFieldLength)
+                .AppendField(x => x.stringTest, defaultFieldLength)
+                .AppendField(x => x.boolTest, defaultFieldLength)
+                .AppendField(x => x.doubleTest, 15);
         }
     }
 }
