@@ -1,0 +1,7 @@
+﻿//namespace FlatFileParserUnitTests.TypeConverters.Interfaces
+//{
+//    public interface IPrimitiveTypeConverter
+//    {
+//        string GetConvertedString(string unparsedString);
+//    }
+//}
